--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: dev
 
 on:
   push:
@@ -17,19 +17,23 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      run: ./gradlew clean build
-      with:
-        arguments: build
+      - run: echo "test"
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - run: echo "build"
+  scan:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - run: echo "scan"
+  deploy-dev:
+    runs-on: ubuntu-latest
+    needs: [scan, build]
+    steps:
+      - run: echo "deploy dev"
+
