--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+archivesBaseName = 'book-service'
 group = 'com.book.service'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
     sourceCompatibility = '17'
