--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -7,9 +7,9 @@
 name: Dev
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 permissions:
   contents: read
 jobs:
