--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,14 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql:42.7.0'
     implementation 'org.flywaydb:flyway-core:9.22.3'
+    implementation 'com.opencsv:opencsv:5.3'
 }
 
 test {
