--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,3 +32,17 @@ jobs:
     steps:
       - run: echo "integration test"
 
+  deploy-to-docker:
+    need: deploy-to-dev
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: shahruk7/book-service
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
