--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.0'
     implementation 'org.flywaydb:flyway-core:9.22.3'
     implementation 'com.opencsv:opencsv:5.3'
+    implementation('org.bitbucket.b_c:jose4j:0.9.3')
 }
 
 test {
